# QSBets

./: .gitignore  LICENSE  README.md  __init__.py  bing_search.py  cache.py  chromadb_integration.py  dashboard.py  deepseek.py  deepseek_lc.py  json_optimizer.py  logger.py  macroeconomic.py  main.py  nasdaq.py  prompts.py  pyproject.toml  redditor.py  run.py  social.py  stock.py  summarize.py  ta.py  telegram.py  utils.py
analysis/: macroeconomic.py  sec_analyzer.py  stock.py  ta.py  ta_interpretation.py
cache/: __init__.py  cache.py
event_driven/: __init__.py  event_bus.py  stock_event_handlers.py
ml_serving/: ai_service.py  config.py  deepseek_lc.py  mlx_fin.py  mlx_model_server.py  model_base.py  model_server.py  ollama_summarize.py  prompts.py  utils.py
search/: utils.py
sec_filings/: tclg-10q.html
social/: redditor.py  social.py
src/: dashboard.py  telegram.py
src/analysis/: __init__.py  economicnews.py  macro_economy.py  macroeconomic.py  sec_analyzer.py  stock.py  ta.py  ta_interpretation.py  utils.py
src/backtesting/: strategy_format.py
src/collectors/: __init__.py  nasdaq.py  redditor.py  social.py  stocktweets.py
src/event_driven/: event_bus.py  stock_event_handlers.py  utils.py
src/ml_serving/: ai_service.py  config.py  prompts.py  utils.py
src/search/: bing_search.py
src/storage/: cache.py
summarize/: __init__.py  azureai_summarize.py  mlx_summarize.py  ollama_summarize.py  utils.py
tests/: ACHR_2025-03-06.json  MRVL_2025-03-16.yaml  SMCI_2025-03-23.yaml  __init__.py  mlx_summarize.py  test_consult.py  test_mlx_consult.py  test_mlx_summarize.py  test_ollama_summarize.py  test_summary_abliterated.py  test_summary_lc_mlx.py  test_summary_sec_filing.py  test_ta_interpretation.py  test_telegram_formatter.py
